# kivy-translate-production-fork

./: .gitignore  README.md  setup.cfg
