[metadata]
name = Kivy translate
version = 0.1
url = https://www.stacja1.pl/
author = Marcin Drobnik
author_email = hydra@stacja1.pl
description = Tool to make translations in kivy a little easier.
long_description = file: README.md
license = MIT
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Localization
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Framework :: Kivy
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

project_urls =
    Source = https://github.com/django/django


[options]
python_requires = >= 3.8
packages = find:
include_package_data = false
zip_safe = false
install_requires =
    configparser

[options.entry_points]
console_scripts =
    kivy_translate = kivy_translate.kivy_translate:main

